2002-03-26  Maciej Stachowiak  <mjs@apple.com>

	* WebKit.pbproj/project.pbxproj: Fixed to build with standalone
	libJavaScriptCore.dylib.

2002-03-26  Kenneth Kocienda  <kocienda@apple.com>

        Changes to help the transition to the new build system which unifies
        our development build setting with the settings we use to ship
        releases.

	* Makefile.am:
	* WebKit.pbproj/kocienda.pbxuser:
	* WebKit.pbproj/project.pbxproj:

2002-03-26  Richard Williamson  <rjw@apple.com>

        Try to ensure that display needed bits are correctly set.
        
	* WebView.subproj/IFWebFramePrivate.mm: (-[IFWebFrame _isLoadComplete]):

2002-03-26  Darin Adler  <darin@apple.com>

	* Misc.subproj/IFError.m: (+[IFError initialize]): Fix a typo where
        we said "unvailable".
        
	* WebView.subproj/IFPreferences.mm: (+[IFPreferences load]): Change
        the default sans-serif font to "Lucida Grande" to match the OS X
        system font, and also make that the defalt standard font.

2002-03-26  John Sullivan  <sullivan@apple.com>

	* WebKit.pbproj/project.pbxproj:
	Marked IFProgress.h Public.

2002-03-25  John Sullivan  <sullivan@apple.com>

	Broke IFLoadProgress out into its own file, and added
	an init method and getters, without which this class
	is useless in Objective-C files (but strangely usable
	in Objective-C++ files, see radar 2887253).

	* WebView.subproj/IFWebController.h:
	* WebView.subproj/IFBaseWebController.mm:
	Took IFLoadProgress declaration and implementation out of here.

	* WebView.subproj/IFLoadProgress.h,
	* WebView.subproj/IFLoadProgress.mm:
	Moved IFLoadProgress declaration and implementation to here;
	added -[IFLoadProgress initWithBytesSoFar:totalToLoad:type:]
	and getters for each field.

	* WebKit.pbproj/project.pbxproj: Updated for new files

2002-03-25  Richard Williamson  <rjw@apple.com>

        Tweaks to force layout of frames and iframes.
        
	* WebView.subproj/IFWebFramePrivate.mm: (-[IFWebFrame _isLoadComplete]):
